objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Anzahl_Essen__c</fullName>
        <label>Anzahl veg. Essen</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <formula>TEXT (Year( DATEVALUE(CreatedDate) ))</formula>
        <label>Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seminar_Leader__c</fullName>
        <inlineHelpText>Who conducted training? Teacher name.</inlineHelpText>
        <label>Seminar Leader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>